2011-07-01 21:19  paddockd

	* [r264] README, scripts/buildall-osx, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_http.c, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Applied http thread yield and
	  output thread PA callback mutex locking removal changes from
	  rpress empeg patch.
	  Updated mac build script for OSX 10.6.8.
	  Increased version to 264.

2011-06-24 12:45  paddockd

	* [r262] ChangeLog, TODO, src/slimaudio/slimaudio_decoder_vorbis.c,
	  src/squeezeslave/squeezeslave.c: Fixed vorbis decoder debug
	  messages.
	  Increased version to 262.

2011-06-06 14:42  paddockd

	* [r261] ChangeLog, src/squeezeslave/squeezeslave.c: Increased
	  version to 261.

2011-06-06 14:40  paddockd

	* [r260] src/slimaudio/slimaudio.h: Could not select output device
	  at index 0 by name. Fixed.

2011-05-21 11:33  paddockd

	* [r259] ChangeLog, TODO, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Fixed default device indicator
	  when using find device by name.
	  Cleaned up -L device display code.
	  Increased version to 259.

2011-05-18 20:04  paddockd

	* [r258] src/slimaudio/slimaudio.c, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_output.c, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c, src/squeezeslave/squeezeslave.h:
	  Output device selection by name (-n/--name) added.

2011-05-18 18:57  paddockd

	* [r257] ChangeLog, wiki/SupportThread.wiki: Capture additional
	  support thread announcement changes.

2011-05-15 11:06  paddockd

	* [r255] ChangeLog, wiki/SlimProtocol.wiki, wiki/SqueezeSlave.wiki,
	  wiki/SupportThread.wiki: Capture support thread announcement and
	  squeezeslave wiki changes.

2011-05-14 15:25  paddockd

	* [r254] ChangeLog, TODO, scripts/buildall-lnx24,
	  scripts/buildall-lnx26, scripts/buildall-lnx26-armel,
	  scripts/buildall-osx, scripts/buildall-win32: 1.1-253 release
	  build script updates.

2011-04-30 20:38  paddockd
